--- a/styleguide/inclass-grid.html
+++ b/styleguide/inclass-grid.html
@@ -16,7 +16,68 @@
 </head>
 <body>
 
+<div class="grid">
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2>Unit 1</h2>
+		<p>Lorem ipsum blah blah words etc. etc. Lorem ipsum blah blah words etc. etc.</p>
+	</div>
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2>Unit 2</h2>
+		<p>Lorem ipsum blah blah words etc. etc. Lorem ipsum blah blah words etc. etc.</p>
+	</div>
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<h2>Unit 3</h2>
+		<p>Lorem ipsum blah blah words etc. etc. Lorem ipsum blah blah words etc. etc.</p>
+	</div>
+</div>
 
+<div class="grid">
+	<div class="gutter unit unit-s-1 unit-m-1 unit-l-1-3">
+		<h2>Unit 1</h2>
+		<img class="img-flex" src="http://placehold.it/640x480" alt="">
+	</div>
+	<div class="gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">
+		<h2>Unit 2</h2>
+		<p>Lorem ipsum blah blah words etc. etc. Lorem ipsum blah blah words etc. etc.</p>
+	</div>
+	<div class="gutter unit unit-s-1 unit-m-1-2 unit-l-1-3">
+		<h2>Unit 3</h2>
+		<p>Lorem ipsum blah blah words etc. etc. Lorem ipsum blah blah words etc. etc.</p>
+	</div>
+</div>
+
+<div class="grid">
+	<div class="unit unit-s-1 unit-m-1-3 unit-l-1-3">
+		<div class="gutter">
+			<h2>Unit 1</h2>
+		</div>
+		<img class="img-flex" src="http://placehold.it/640x480" alt="">
+	</div>
+	<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
+		<div class="gutter">
+			<h2>Unit 2</h2>
+		</div>
+		<img class="img-flex" src="http://placehold.it/640x480" alt="">
+	</div>
+	<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
+		<div class="gutter">
+			<h2>Unit 3</h2>
+		</div>
+		<img class="img-flex" src="http://placehold.it/640x480" alt="">
+	</div>
+</div>
+
+<div class="grid">
+	<div class="unit unit-s-1 unit-m-1-2 unit-l-2-3">
+		<img class="img-flex" src="http://placehold.it/1000x600" alt="">
+	</div>
+	<div class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
+		<h2>Unit 2</h2>
+		<p>Lore ipsum dolor si amet lorem ipsum dolor si amet.</p>
+	</div>
+</div>
+	
+		
 
 </body>
 </html>
